welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: value && is not a member of Int
  } while(!(h=0 && l=7))
                ^ColumnByColumn:12: error: value unary_! is not a member of Unit
  } while(!(h=0 && l=7))
          ^